# ipomoeaalba

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE
include/: ipomoeaalba.h
include/ia/: audio.h  foundation.h  ia_base.h  ia_compute.h  ia_datastructures.h  render.h  render_commands.h  render_graph.h  video.h  xr.h
include/ia/base/: atomic.h  defer.h  endian.h  filesystem.h  framework.h  keycodes.h  log.h  magic.h  memory.h  os.h  sanitize.h  scancodes.h  system.h  targets.h  types.h  work.h
include/ia/compute/: bits.h  simd.h
include/ia/compute/simd/: neon.h  rvv.h  wasm.h  x86.h
include/ia/datastructures/: arena.h  balloc.h  bitset.h  dagraph.h  darray.h  deque.h  hashmap.h  map.h  mpmc.h  sparse.h  stack.h  strbuf.h  switch.h
include/ia/instruments/: imgui_tools.h  render_commands.h  render_graph.h  sorceress.h
include/ia/modules/: audio.h  ecs.h  gfx.h  net.h  phys.h  render.h  video.h  xr.h
resources/protocols/: input-timestamps-unstable-v1.xml
shaders/: ipomoeaalba.slang
source/cynicmoon/: main.c
source/engine/: datastructures.c  foundation.c  framework.c  system_linux.c  system_unix.c  system_windows.c
source/engine/asm/: fcontext_aarch64_aapcs_elf.s  fcontext_amd64_sysv_elf.s  fcontext_rv64gc_sysv_elf.s
source/engine/audio/: iasiothiscallresolver.h
source/engine/render/: render_impl.c
